<resources>
    <string name="app_name">Inquiry</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="inquire_button">查询</string>
    <string name="back_button">back</string>

    <string name="tel_hint">请输入手机号码</string>
    <string name="tel_province">省份:</string>
    <string name="tel_city">城市:</string>
    <string name="tel_areacode">区号:</string>
    <string name="tel_zip">邮编:</string>
    <string name="tel_company">运营商:</string>
    <string name="tel_card">卡类型:</string>

    <string name="weather_hint">请输入城市名</string>

    <string name="movie_hint">请输入电影名</string>

    <string name="ip_hint">请输入网址</string>

    <string name="apple_hint">请输入苹果序列号</string>

</resources>
