<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_tel_inquire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_tel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="5"
            android:hint="@string/tel_hint" />

        <Button
            android:id="@+id/btn_tel_inquire"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="2"
            android:text="@string/inquire_button"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_tel_back"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_weight="2"
            android:text="@string/back_button"
            android:textSize="15sp" />


    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_tel_inquire"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="10dp"
        android:stretchColumns="1">

        <TableRow android:layout_marginTop="@dimen/widget_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tel_province"
                android:textSize="@dimen/text_size_tital" />

            <TextView
                android:id="@+id/txt_tel_result_province"
                android:layout_height="wrap_content"
                android:text="province test"
                android:textSize="@dimen/text_size_content"
                android:visibility="invisible" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/widget_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tel_city"
                android:textSize="@dimen/text_size_tital" />

            <TextView
                android:id="@+id/txt_tel_result_city"
                android:layout_height="wrap_content"
                android:text="city test"
                android:textSize="@dimen/text_size_content"
                android:visibility="invisible" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/widget_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tel_areacode"
                android:textSize="@dimen/text_size_tital" />

            <TextView
                android:id="@+id/txt_tel_result_areacode"
                android:layout_height="wrap_content"
                android:text="areacode test"
                android:textSize="@dimen/text_size_content"
                android:visibility="invisible" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/widget_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tel_zip"
                android:textSize="@dimen/text_size_tital" />

            <TextView
                android:id="@+id/txt_tel_result_zip"
                android:layout_height="wrap_content"
                android:text="zip test"
                android:textSize="@dimen/text_size_content"
                android:visibility="invisible" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/widget_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tel_company"
                android:textSize="@dimen/text_size_tital" />

            <TextView
                android:id="@+id/txt_tel_result_company"
                android:layout_height="wrap_content"
                android:text="company test"
                android:textSize="@dimen/text_size_content"
                android:visibility="invisible" />
        </TableRow>

        <TableRow android:layout_marginTop="@dimen/widget_margin">

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/tel_card"
                android:textSize="@dimen/text_size_tital" />

            <TextView
                android:id="@+id/txt_tel_result_card"
                android:layout_height="wrap_content"
                android:text="card test"
                android:textSize="@dimen/text_size_content"
                android:visibility="invisible" />
        </TableRow>
    </TableLayout>


</RelativeLayout>